--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+urlgrabber (3.1.0-4) UNRELEASED; urgency=low
+
+  * Homepage field added
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 22 Sep 2007 17:09:28 +0200
+
 urlgrabber (3.1.0-3) unstable; urgency=low
 
   * debian/control: Added python modules packaging team to uploaders and added
