--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 urlgrabber (3.1.0-4) UNRELEASED; urgency=low
 
   * Homepage field added
+  * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)
 
- -- Piotr Ożarowski <piotr@debian.org>  Sat, 22 Sep 2007 17:09:28 +0200
+ -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
 urlgrabber (3.1.0-3) unstable; urgency=low
 
