Prepare for Python 2.6 transition (closes: #556161).
git-svn-id: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk@10434 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   [ Jakub Wilk ]
   * Build-depend on python-all rather than python-all-dev.
   * Remove superfluous references to CFLAGS from debian/rules.
+  * Prepare for Python 2.6 transition (closes: #556161).
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
