--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * Build-depend on python-all rather than python-all-dev.
   * Remove superfluous references to CFLAGS from debian/rules.
   * Prepare for Python 2.6 transition (closes: #556161).
+  * Typographical fixes in debian/copyright.
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
