--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * Remove superfluous references to CFLAGS from debian/rules.
   * Prepare for Python 2.6 transition (closes: #556161).
   * Typographical fixes in debian/copyright.
+  * Bump standards version to 3.8.3 (no additional changes needed).
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
