--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * Prepare for Python 2.6 transition (closes: #556161).
   * Typographical fixes in debian/copyright.
   * Bump standards version to 3.8.3 (no additional changes needed).
+  * Point to the versioned LGPL-2.1 in debian/copyright.
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
