--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * Typographical fixes in debian/copyright.
   * Bump standards version to 3.8.3 (no additional changes needed).
   * Point to the versioned LGPL-2.1 in debian/copyright.
+  * Add README.source.
 
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
