--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,7 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * Point to the versioned LGPL-2.1 in debian/copyright.
   * Add README.source.
 
- -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
+ -- Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>  Sat, 14 Nov 2009 09:37:03 +0100
 
 urlgrabber (3.1.0-4) unstable; urgency=low
 
