Add Depends on python-pycurl.
git-svn-id: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk@13613 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+urlgrabber (3.9.1-3) unstable; urgency=low
+
+  * Add Depends on python-pycurl. Closes: #587000.
+
+ -- Kevin Coyner <kcoyner@debian.org>  Fri, 25 Jun 2010 02:04:19 +0000
+
 urlgrabber (3.9.1-2) unstable; urgency=low
 
   * Install with only the default python version to avoid unnecessary depends
