--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+urlgrabber (3.9.1-4) unstable; urgency=low
+
+  * Add two patches created from upstream development version. Closes: #587575. 
+  * Changed to 3.0 quilt format:
+    + Add quilt to build-depends.
+    + Add quilt command to debian/rules.
+
+ -- Kevin Coyner <kcoyner@debian.org>  Thu, 08 Jul 2010 17:40:08 +0000
+
 urlgrabber (3.9.1-3) unstable; urgency=low
 
   * Add Depends on python-pycurl. Closes: #587000.
